@@ -1,3 +1,9 @@
+2012-02-06  Joseph Myers  <joseph@codesourcery.com>
+
+	* sysdeps/i386/sysdep.h: Include <features.h>.
+	(GET_PC_THUNK, GET_PC_THUNK_STR): Define conditionally on compiler
+	version.
+
 2012-02-05  Joseph Myers  <joseph@codesourcery.com>
 
 	* sysdeps/i386/sysdep.h (SETUP_PIC_REG_STR, LOAD_PIC_REG_STR):
